src/objects/EscalationComment__c.object
<CustomObject>
    <description>Comments added to an escalation</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>The comment body</description>
        <inlineHelpText>The comment body</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that created the comment. Null if created by a user</description>
        <inlineHelpText>The contact that created the comment. Null if created by a user</inlineHelpText>
        <label>Created By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Escalation Comments</relationshipLabel>
        <relationshipName>Escalation_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Link__c</fullName>
        <description>Link to the user or contact that created the comment</description>
        <formula>IF(NOT(ISBLANK(Created_By_Contact__c)), HYPERLINK(&apos;/&apos; + Created_By_Contact__c, Created_By_Contact__r.FirstName + &apos; &apos; + Created_By_Contact__r.LastName, &apos;_self&apos;),
	(IF(NOT(ISBLANK(Created_By_User__c)), HYPERLINK(&apos;/&apos; + Created_By_User__c, Created_By_User__r.FirstName + &apos; &apos; +  Created_By_User__r.LastName, &apos;_self&apos;),
	IF(NOT(ISBLANK(CreatedById)), HYPERLINK(&apos;/&apos; + CreatedById, CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName, &apos;_self&apos;), &apos;&apos;)
	)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the user or contact that created the comment</inlineHelpText>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Text__c</fullName>
        <description>The text about who created the comment</description>
        <inlineHelpText>The text about who created the comment</inlineHelpText>
        <label>Created By Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that created the comment. Null if created by a contact</description>
        <inlineHelpText>The user that created the comment. Null if created by a contact</inlineHelpText>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Escalation_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>BLANKVALUE(Created_By_Contact__r.FirstName + &apos; &apos; + Created_By_Contact__r.LastName,
	BLANKVALUE(Created_By_User__r.FirstName + &apos; &apos; + Created_By_User__r.LastName,
	CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <description>The escalation the comment is associated with</description>
        <inlineHelpText>The escalation the comment is associated with</inlineHelpText>
        <label>Escalation</label>
        <referenceTo>Escalation__c</referenceTo>
        <relationshipLabel>Escalation Comments</relationshipLabel>
        <relationshipName>Escalation_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_Id__c</fullName>
        <description>The id of the user/contact that last modified the comment</description>
        <inlineHelpText>The id of the user/contact that last modified the comment</inlineHelpText>
        <label>LastModifiedBy_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(LastModifiedBy_Text__c)), Created_By_Text__c,  LastModifiedBy.FirstName + &apos; &apos; +  LastModifiedBy.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedBy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_Text__c</fullName>
        <description>Text of the last modified by user</description>
        <inlineHelpText>Text of the last modified by user</inlineHelpText>
        <label>LastModifiedBy_Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that last modified the comment. Null if last modified by a contact</description>
        <inlineHelpText>The user that last modified the comment. Null if last modified by a contact</inlineHelpText>
        <label>LastModifiedBy_User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Escalation_Comments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Link__c</fullName>
        <formula>IF(NOT(ISBLANK(Created_By_Contact__c)), HYPERLINK(&apos;/&apos; + Created_By_Contact__r.Id, Created_By_Contact__r.FirstName  + &apos; &apos; +
	Created_By_Contact__r.LastName, &apos;_self&apos;),
	IF(NOT(ISBLANK(Created_By_User__c)), HYPERLINK(&apos;/&apos; +  LastModifiedBy_User__r.Id, LastModifiedBy_User__r.FirstName  + &apos; &apos; +  LastModifiedBy_User__r.LastName, &apos;_self&apos;),
	IF(NOT(ISBLANK(LastModifiedById)), HYPERLINK(&apos;/&apos; + LastModifiedById, LastModifiedBy.FirstName + &apos; &apos; +  LastModifiedBy.LastName, &apos;_self&apos;),
	IF(NOT(ISBLANK(LastModifiedBy_Text__c)),LastModifiedBy_Text__c,&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <description>The date the comment was last modified</description>
        <inlineHelpText>The date the comment was last modified</inlineHelpText>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the comment is private</description>
        <inlineHelpText>If the comment is private</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <label>Escalation Comment</label>
    <nameField>
        <displayFormat>ECN-{00000}</displayFormat>
        <label>Escalation Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>